========================
django-profile Changelog
========================

Development version
-------------------

* Corrected a misspellings on the documentation. Thanks to paltman.

Version 0.5.0
-------------

* CSS and HTML formatted with Blueprint CSS (http://code.google.com/p/blueprintcss/).
* Lot of code optimization of Django, HTML, CSS and Javascript.
* Great effort on application usability and template design.
* Removed every javascript effectism not really needed.
* Lot of this work made as team with jonas.esp (http://code.google.com/u/jonas.esp/).


Version 0.4.2
-------------

* Changed the CSS structure. Now is managed with the great Blueprint CSS Framework. Thanks to Kless.
	http://code.google.com/p/blueprintcss/
* Some cleanup on the image directory.

Version 0.4.1
-------------
* Solved some bugs on the optional configuration parameters APIKEY and WEBSEARCH. Now they are
  totally optional. Thanks to Kless.
* Solved a bug on the image crop&resize. If you didn't select a portion of the image, an error
  was raised. Thanks to David Castello for the report.
* Some cleanup of the javascript files.

Version 0.4.0.1
---------------

* Solved a problem with license issues. Thanks to Kless.
* Solved a typo on the registration form. Thanks to stephan.d.walter.
* Renamed ROOT_PATH to PROJECT_PATH and solved a bug about directory paths. Thanks to jonas.esp.

Version 0.4.0
-------------

* Changed the license type. Now this project has a Simplified BSD license.
* Backward incompatible with older versions.
* Simpler, easier to integrate.
* New interface, more usable and structured.
* Removed the "account" module. Everything is integrated in the module "userprofile".
* Added fixtures for the inital load of Countries and Continents. Thanks to Rob Yates.
* Solved some bugs on the "account" module. Thanks to Rob Yates again.
* Removed the "libmagic" dependency.
* Updated jquery version.
* New avatar crop&resize plugin.